--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -56,7 +56,7 @@
     position: absolute;
     min-width: 10px;
     min-height: 10px;
-    background-color: #CA8787;
+    background-color: #0A6847;
     border-radius: 5px;
     top: -8px;
     right: -8px;
