--- a/frontend/src/components/FoodItem/FoodItem.css
+++ b/frontend/src/components/FoodItem/FoodItem.css
@@ -26,6 +26,7 @@
 .food-item-name-rating p {
     font-size: 20px;
     font-weight: 500;
+    color: #0A6847;
 }
 
 .food-item-name-rating img {
@@ -38,7 +39,7 @@
 }
 
 .food-item-price {
-    color: #CA8787;
+    color: #0A6847;
     font-size: 22px;
     font-weight: 500;
     margin: 10px 0px;
