--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -30,7 +30,7 @@
     width: 50%;
     font-size: 50px;
     font-family: cursive;
-    color: #ca8787;
+    color: #F3CA52;
 }
 
 .footer-content-left li,
