--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -2,7 +2,7 @@
     height: 34vw;
     margin: 5px auto;
     position: relative;
-    background: url('/header-banner.png') no-repeat;
+    background: url('/eatk_banner.png') no-repeat;
     background-size: cover;
     border-radius: 20px;
 }
@@ -22,13 +22,13 @@
 .header-contents h2 {
     font-weight: 500;
     font-size: max(4.5vw, 22px);
-    color: #EEEEEE;
+    color: black;
 }
 
 .header-contents p {
-    font-size: 1.1vw;
-    font-weight: 200;
-    color: #EEEEEE;
+    font-size: 1.2vw;
+    font-weight: 300;
+    color: black;
 }
 
 .header-contents button {
@@ -38,7 +38,8 @@
     border-radius: 50px;
     font-size: max(1vw, 13px);
     padding: 1vw 2.3vw;
-    color: #49557e;
+    color: black;
+    cursor: pointer;
 }
 
 @media (max-width:1050px) {
