--- a/frontend/src/pages/Cart/Cart.css
+++ b/frontend/src/pages/Cart/Cart.css
@@ -12,7 +12,7 @@
 
 .cart-items-item {
     margin: 10px 0px;
-    color: black;
+    color: #092635;
 }
 
 .cart-items-item img {
@@ -41,6 +41,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    color: #092635;
 }
 
 .cart-total-details {
@@ -90,7 +91,7 @@
 .cart-promocode-input button {
     width: max(10vw, 150px);
     padding: 12px 5px;
-    background-color: black;
+    background-color: #092635;
     border: none;
     color: white;
     border-radius: 4px;
